-
Bug
-
Resolution: Done
-
P1: Critical
-
5.14.0 Alpha
-
None
-
-
f3668f88ccad6341280fbe2ca493562f80e76955 (qt/qtwayland/5.14)
This manifests itself as flakiness in tst_xdgshell::popup. The easiest way to reproduce, is to run the test multiple times in quick succession, i.e.:
./tst_xdgshell popup popup popup popup popup popup popup popup popup popup popup popup popup popup popup popup popup popup popup popup popup popup popup popup popup popup
It crashes because when we flush old pointer events, we dereference a raw QWaylandWindow pointer which may be dangling.
This is a regression in 5.14, as 5.13 didn't have that pointer, and didn't handle wl_pointer.frame events.
| For Gerrit Dashboard: QTBUG-77976 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 272397,2 | Client: Fix crash on wl_pointer.up after destroying a window | 5.14 | qt/qtwayland | Status: MERGED | +2 | 0 |